[gd_scene load_steps=4 format=3 uid="uid://clt6mn766fc23"]

[ext_resource type="Script" uid="uid://nk572r5e15vu" path="res://Scenes/UI/Menu/main_menu.gd" id="1_5wsvm"]
[ext_resource type="PackedScene" uid="uid://bwwk8crh6u2he" path="res://Scenes/UI/Menu/settings.tscn" id="2_nub77"]

[sub_resource type="LabelSettings" id="LabelSettings_36iwh"]
font_size = 64

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5wsvm")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00011382803, 0.00011382803, 0.00011382803, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -267.0
offset_top = -145.5
offset_right = 267.0
offset_bottom = 145.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "[NOME DO JOGO]"
label_settings = SubResource("LabelSettings_36iwh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "START GAME"

[node name="Settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "SETTINGS"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "EXIT GAME"

[node name="Settings" parent="." instance=ExtResource("2_nub77")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_back_pressed"]

[editable path="Settings"]
